---
title: Abstract Margin
---
classDiagram
    direction LR

    class MarginInterface {
        <<Interface>>
    }

    class AbstractMargin {
        <<Abstract>>
        -float margin
        -float minimum
        -float maximum
        +getMargin() float
        +setMargin(float)
        +getMinimum() float
        +setMinimum(float)
        +getMaximum() float
        +setMaximum(float)
        +contains(float) bool
    }

    class GroupMargin {
        -Group group
        +getGroup() Group
        +set(Group)
    }

    class AbstractEntity {
        <<Abstract>>
    }

    class EntityInterface {
        <<Interface>>
    }

    EntityInterface <|.. AbstractEntity
    AbstractEntity <|-- AbstractMargin
    MarginInterface <|.. AbstractMargin
    AbstractMargin <|-- GroupMargin
    AbstractMargin <|-- GlobalMargin
    Group "0" --* "*" GroupMargin

    click MarginInterface call nodeCallback()
    click EntityInterface call nodeCallback()
    click AbstractEntity call nodeCallback()
    click Group call nodeCallback()
    click GlobalMargin call nodeCallback()
